# MiniPdf

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  conversion_quality.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml.disabled  main_minipdf-api.yml.disabled  nuget-publish-cli.yml.disabled  nuget-publish.yml.disabled  pages.yml.disabled  release-aot-gui.yml.disabled  release-aot.yml.disabled
MiniPdf.Api/: Program.cs
MiniPdf.Web/: README.md  deploy.ps1.disabled
MiniPdf.Web/MiniPdf.Web.Client/: I18n.cs
artifacts/: AcademicAchievement_temp_p2_analysis.json
documents/: README.fr.md  README.it.md  README.ja.md  README.ko.md  README.nuget.cli.md  README.nuget.md  README.zh-CN.md  README.zh-TW.md
minipdf-rs/: Cargo.toml  README.md
minipdf-rs/crates/minipdf/: Cargo.toml
minipdf-rs/crates/minipdf-cli/: Cargo.toml
minipdf-rs/crates/minipdf-cli/src/: main.rs
minipdf-rs/crates/minipdf/src/: docx.rs  lib.rs  office.rs  pdf.rs  xlsx.rs
scripts/: Run-Benchmark.ps1  Run-Benchmark_docx.ps1  Run-Benchmark_issues.ps1  Run-Benchmark_pptx.ps1  Run-Benchmark_pptx.ps1.disabled  Test-PdfMergeVisual.ps1
src/MiniPdf/: DocxReader.cs  DocxToPdfConverter.cs  ExcelReader.cs  ExcelToPdfConverter.cs  MiniPdf.cs  MiniPdf.csproj  PdfDocument.cs  PdfMerger.cs  PdfPage.cs  PdfTextBlock.cs  PdfWriter.cs  PptxReader.cs  PptxToPdfConverter.cs  ZipEntrySafety.cs
src/MiniPdf.Cli/: MiniPdf.Cli.csproj  Program.cs
tests/MiniPdf.Benchmark/: benchmark_manifest.sample.json  (+6 more)
(+46 files in other folders)
