[workspace]
members = [
    "crates/minipdf",
    "crates/minipdf-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/mini-software/MiniPdf"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
roxmltree = "0.20"
thiserror = "2"
zip = { version = "2.2", default-features = false, features = ["deflate"] }